Fixed: small glitch involving overlapping elements while horizontally oriented

--- a/partbookViewer.css
+++ b/partbookViewer.css
@@ -94,7 +94,7 @@ select{
 .diva-horizontal-not-buttons{
 	width:100%;
 	line-height:16px;
-	top:1.3em;
+	top:2em;
 	display:inline-block;
 	position:relative;
 }
